<resources>
    <string name="app_name">Spendwise</string>
    <string name="date">Date</string>
    <string name="transaction_type">Transaction_type</string>
    <string name="category">Category</string>
    <string name="amount">Amount</string>
    <string name="note">Note</string>
    <string name="picture">Picture</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="salary">Enter your Salary</string>
    <string name="clothes">Clothes</string>
    <string name="food">Food</string>
    <string name="transport">Transport</string>
    <string name="entertainment">Entertainment</string>
    <string name="others">Others</string>
    <string name="title_activity_cash_flow">CashFlow</string>
</resources>
